// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitAppWizardModal should match snapshot when visible = true 1`] = `
<Component
  afterClose={[MockFunction]}
  renderChildren={true}
  visible={true}
>
  <Component
    afterClose={[MockFunction]}
  />
</Component>
`;

exports[`SubmitAppWizardModal should match snapshot when visible = true 2`] = `
<Component
  afterClose={[MockFunction]}
  renderChildren={true}
  visible={false}
>
  <Component
    afterClose={[MockFunction]}
  />
</Component>
`;
